Author identification through chatgpt

--- a/Political_Bias_Analyzer/index.html
+++ b/Political_Bias_Analyzer/index.html
@@ -96,6 +96,10 @@
                 <div class="spinner"></div>
                 <p>Analyzing article...</p>
             </div>
+            <div id="articleContent" class="article-content hidden">
+                <h3>Article Content</h3>
+                <div id="articleText"></div>
+            </div>
             <div id="authorInfo" class="author-info hidden">
                 <h3>Author Information</h3>
                 <div id="authorContent"></div>
