temperature and model selection

--- a/LLM_design_template/index.html
+++ b/LLM_design_template/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; object-src 'none'; base-uri 'self'; frame-ancestors 'none';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; object-src 'none'; base-uri 'self'; frame-ancestors 'none'; connect-src 'self' https://api.openai.com;">
     <title>Template</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
@@ -27,18 +27,58 @@
             <div class="popup-body">
                 <div class="form-group">
                     <label for="apiKey">API Key</label>
-                    <input type="password" id="apiKey" class="api-key-input" placeholder="Enter your API key">
+                    <div class="input-wrapper">
+                        <input type="password" id="apiKey" class="api-key-input" placeholder="Enter your API key">
+                        <button type="button" id="togglePassword" class="toggle-password-btn" aria-label="Toggle password visibility">
+                            <svg id="eyeClosed" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                                <circle cx="12" cy="12" r="3"></circle>
+                            </svg>
+                            <svg id="eyeOpen" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: none;">
+                                <path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"></path>
+                                <line x1="1" y1="1" x2="23" y2="23"></line>
+                            </svg>
+                        </button>
+                    </div>
                 </div>
                 <div class="button-group">
+                    <button id="loadKeyBtn" class="btn btn-secondary">Load Key</button>
                     <button id="saveKeyBtn" class="btn btn-primary">Save Key</button>
                     <button id="deleteKeyBtn" class="btn btn-secondary">Delete Key</button>
+                </div>
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="form-field-inline">
+                            <label for="temperature">Temperature</label>
+                            <input type="number" id="temperature" class="api-key-input" min="0" max="1" step="0.1" value="0.3" placeholder="0.3">
+                        </div>
+                        <div class="form-field-inline">
+                            <label for="modelSelection">Model selection</label>
+                            <select id="modelSelection" class="api-key-input">
+                                <option value="">Select model</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="container mx-auto px-4 py-8">
-        <!-- Template content goes here -->
+        <div class="chat-interface">
+            <div class="form-group">
+                <label for="promptInput">Prompt</label>
+                <textarea id="promptInput" class="prompt-input" rows="4" placeholder="Enter your prompt here..."></textarea>
+            </div>
+            <div class="button-group">
+                <button id="runBtn" class="btn btn-primary">Run</button>
+                <button id="clearBtn" class="btn btn-secondary">Clear</button>
+            </div>
+            <div class="form-group">
+                <label for="resultInput">Result</label>
+                <textarea id="resultInput" class="result-input" rows="8" placeholder="Results will appear here..." readonly></textarea>
+            </div>
+        </div>
     </div>
     <script src="secureStorage.js"></script>
     <script src="script.js"></script>
