--- a/LLM_design_template/index.html
+++ b/LLM_design_template/index.html
@@ -55,7 +55,12 @@
                         <div class="form-field-inline">
                             <label for="modelSelection">Model selection</label>
                             <select id="modelSelection" class="api-key-input">
-                                <option value="">Select model</option>
+                                <option value="gpt-5.1" selected>gpt-5.1</option>
+                                <option value="gpt-5">gpt-5</option>
+                                <option value="gpt-4.1">gpt-4.1</option>
+                                <option value="gpt-4.1-mini">gpt-4.1-mini</option>
+                                <option value="gpt-4o">gpt-4o</option>
+                                <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
                             </select>
                         </div>
                     </div>
